--- a/MasterChief.DotNet4.UtilitiesTests/MasterChief.DotNet4.UtilitiesTests.csproj
+++ b/MasterChief.DotNet4.UtilitiesTests/MasterChief.DotNet4.UtilitiesTests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Common\ArrayHelperTests.cs" />
     <Compile Include="Common\CollectionHelperTests.cs" />
     <Compile Include="Common\ObjectHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
