--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Common\BitArrayHelper.cs" />
     <Compile Include="Common\CollectionHelper.cs" />
     <Compile Include="Common\ObjectHelper.cs" />
+    <Compile Include="Common\StringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
