--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,16 +42,112 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collection\SerializableDictionary.cs" />
+    <Compile Include="Common\ADDomainHelper.cs" />
     <Compile Include="Common\BCDHelper.cs" />
     <Compile Include="Common\ArrayHelper.cs" />
     <Compile Include="Common\ASCIIHelper.cs" />
     <Compile Include="Common\AttributeHelper.cs" />
     <Compile Include="Common\Base64Helper.cs" />
+    <Compile Include="Common\BDGCJLatLonHelper.cs" />
     <Compile Include="Common\BitArrayHelper.cs" />
+    <Compile Include="Common\BitHelper.cs" />
+    <Compile Include="Common\ByteHelper.cs" />
+    <Compile Include="Common\CheckHelper.cs" />
     <Compile Include="Common\CollectionHelper.cs" />
+    <Compile Include="Common\ComparisonHelper.cs" />
+    <Compile Include="Common\ConvertHelper.cs" />
+    <Compile Include="Common\CSVHelper.cs" />
+    <Compile Include="Common\DataBaseHelper.cs" />
+    <Compile Include="Common\DataSetHelper.cs" />
+    <Compile Include="Common\DataTableHelper.cs" />
+    <Compile Include="Common\DateHelper.cs" />
+    <Compile Include="Common\DbParameterHelper.cs" />
+    <Compile Include="Common\DbParameterHelpercs.cs" />
+    <Compile Include="Common\DebugHelper.cs" />
+    <Compile Include="Common\DecimalHelper.cs" />
+    <Compile Include="Common\DictionaryHelper.cs" />
+    <Compile Include="Common\DoubleHelper.cs" />
+    <Compile Include="Common\EnumHelper.cs" />
+    <Compile Include="Common\EventHandlerHelper.cs" />
+    <Compile Include="Common\ExceptionHelper.cs" />
+    <Compile Include="Common\ExifHelper.cs" />
+    <Compile Include="Common\FileExtInfoHelper.cs" />
+    <Compile Include="Common\FileHelper.cs" />
+    <Compile Include="Common\FontHelper.cs" />
+    <Compile Include="Common\FormulaHelper.cs" />
+    <Compile Include="Common\FrameworkExceptionHelper.cs" />
+    <Compile Include="Common\FuzzyHelper.cs" />
+    <Compile Include="Common\GeoHelper.cs" />
+    <Compile Include="Common\GuidHelper.cs" />
+    <Compile Include="Common\HexHelper.cs" />
+    <Compile Include="Common\HtmlHelper.cs" />
+    <Compile Include="Common\IDataReaderHelper.cs" />
+    <Compile Include="Common\IDbCommandHelper.cs" />
+    <Compile Include="Common\IEnumerableHelper.cs" />
+    <Compile Include="Common\ImageHelper.cs" />
+    <Compile Include="Common\IntHelper.cs" />
+    <Compile Include="Common\JsonHelper.cs" />
+    <Compile Include="Common\LogHelper.cs" />
+    <Compile Include="Common\MapOffsetDataHelper.cs" />
+    <Compile Include="Common\MapOffsetHelper.cs" />
+    <Compile Include="Common\MathHelper.cs" />
+    <Compile Include="Common\ModelHelper.cs" />
+    <Compile Include="Common\NameValueHelper.cs" />
+    <Compile Include="Common\NetWorkHelper.cs" />
     <Compile Include="Common\ObjectHelper.cs" />
+    <Compile Include="Common\PinyingHelper.cs" />
+    <Compile Include="Common\ProcessHelper.cs" />
+    <Compile Include="Common\ProjectHelper.cs" />
+    <Compile Include="Common\RandomHelper.cs" />
+    <Compile Include="Common\ReflectHelper.cs" />
+    <Compile Include="Common\RegexHelper.cs" />
+    <Compile Include="Common\ResourceHelper.cs" />
+    <Compile Include="Common\RMBHelper.cs" />
+    <Compile Include="Common\SortHelper.cs" />
+    <Compile Include="Common\StringBuilderHelper.cs" />
     <Compile Include="Common\StringHelper.cs" />
+    <Compile Include="Common\ThreadHelper.cs" />
+    <Compile Include="Common\ThumbHelper.cs" />
+    <Compile Include="Common\TimeSpanHelper.cs" />
+    <Compile Include="Common\UnitTestHelper.cs" />
+    <Compile Include="Common\UnixEpochHelper.cs" />
+    <Compile Include="Common\WGSGCJLatLonHelper.cs" />
+    <Compile Include="Common\WGSMercatorLatLonHelper.cs" />
+    <Compile Include="Common\XMLHelper.cs" />
+    <Compile Include="Enum\DateTimePart.cs" />
+    <Compile Include="Model\AppInfo.cs" />
+    <Compile Include="Model\BitmapInfo.cs" />
+    <Compile Include="Model\ClipboardCtrl.cs" />
+    <Compile Include="Model\ControlRect.cs" />
+    <Compile Include="Model\CsvRow.cs" />
+    <Compile Include="Model\ExifMetadata.cs" />
+    <Compile Include="Model\ExifMetadataDetail.cs" />
+    <Compile Include="Model\FileProperties.cs" />
+    <Compile Include="Model\GeoPoint.cs" />
+    <Compile Include="Model\JsChildNode.cs" />
+    <Compile Include="Model\JsTreeNode.cs" />
+    <Compile Include="Model\LatLngPoint.cs" />
+    <Compile Include="Model\ListItem.cs" />
+    <Compile Include="Model\MapCoord.cs" />
+    <Compile Include="Model\MenuStripItem.cs" />
+    <Compile Include="Model\MimeTypes.cs" />
+    <Compile Include="Model\Operater.cs" />
+    <Compile Include="Model\PageCondition.cs" />
+    <Compile Include="Model\PageList.cs" />
+    <Compile Include="Model\PerformanceParams.cs" />
+    <Compile Include="Model\RegexPattern.cs" />
+    <Compile Include="Model\RequestClientInfo.cs" />
+    <Compile Include="Model\SmtpServer.cs" />
+    <Compile Include="Model\SocketConnectionInfo.cs" />
+    <Compile Include="Model\SortCondition.cs" />
+    <Compile Include="Model\TcpClientConnectSession.cs" />
+    <Compile Include="Model\TipMessage.cs" />
+    <Compile Include="Model\TokenInfo.cs" />
+    <Compile Include="Model\UserInfo.cs" />
+    <Compile Include="Model\Validation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegexPattern.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
