--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Common\BDGCJLatLonHelper.cs" />
     <Compile Include="Common\BitArrayHelper.cs" />
     <Compile Include="Common\BitHelper.cs" />
+    <Compile Include="Common\ByteHelper.cs" />
     <Compile Include="Common\CheckHelper.cs" />
     <Compile Include="Common\CollectionHelper.cs" />
     <Compile Include="Common\ConvertHelper.cs" />
