--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -72,10 +73,12 @@
     <Compile Include="Common\FileHelper.cs" />
     <Compile Include="Common\FontHelper.cs" />
     <Compile Include="Common\FuzzyHelper.cs" />
+    <Compile Include="Common\GeoHelper.cs" />
     <Compile Include="Common\GuidHelper.cs" />
     <Compile Include="Common\HexHelper.cs" />
     <Compile Include="Common\IDataReaderHelper.cs" />
     <Compile Include="Common\IDbCommandHelper.cs" />
+    <Compile Include="Common\ImageHelper.cs" />
     <Compile Include="Common\IntHelper.cs" />
     <Compile Include="Common\JsonHelper.cs" />
     <Compile Include="Common\MathHelper.cs" />
@@ -93,9 +96,12 @@
     <Compile Include="Common\TimeSpanHelper.cs" />
     <Compile Include="Common\UnixEpochHelper.cs" />
     <Compile Include="Common\XMLHelper.cs" />
+    <Compile Include="Enum\CutType.cs" />
     <Compile Include="Enum\DateTimePart.cs" />
+    <Compile Include="Enum\ImgWaterPosition.cs" />
     <Compile Include="Model\CsvRow.cs" />
     <Compile Include="Model\FileDetail.cs" />
+    <Compile Include="Model\GeoPoint.cs" />
     <Compile Include="Model\LatLngPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexPattern.cs" />
