--- a/MasterChief.DotNet4.5.Utilities/MasterChief.DotNet4.5.Utilities.csproj
+++ b/MasterChief.DotNet4.5.Utilities/MasterChief.DotNet4.5.Utilities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Communication\UdpAppBase.cs" />
     <Compile Include="Communication\UdpAppClient.cs" />
     <Compile Include="Communication\UdpAppServer.cs" />
+    <Compile Include="Core\PeriodicTask.cs" />
     <Compile Include="Model\UdpAppReceived.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
