--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -61,7 +61,6 @@
     <Compile Include="Common\BitHelper.cs" />
     <Compile Include="Common\ByteHelper.cs" />
     <Compile Include="Common\CheckHelper.cs" />
-    <Compile Include="Common\CollectionHelper.cs" />
     <Compile Include="Common\ConvertHelper.cs" />
     <Compile Include="Common\CSVHelper.cs" />
     <Compile Include="Common\DataBaseHelper.cs" />
@@ -85,6 +84,7 @@
     <Compile Include="Common\HexHelper.cs" />
     <Compile Include="Common\IDataReaderHelper.cs" />
     <Compile Include="Common\IDbCommandHelper.cs" />
+    <Compile Include="Common\IEnumerableHelper.cs" />
     <Compile Include="Common\ImageHelper.cs" />
     <Compile Include="Common\IntHelper.cs" />
     <Compile Include="Common\JsonHelper.cs" />
