--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -37,7 +37,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -100,6 +102,7 @@
     <Compile Include="Common\ReflectHelper.cs" />
     <Compile Include="Common\RegexHelper.cs" />
     <Compile Include="Common\ResourceHelper.cs" />
+    <Compile Include="Common\SerializeHelper.cs" />
     <Compile Include="Common\StringBuilderHelper.cs" />
     <Compile Include="Common\StringHelper.cs" />
     <Compile Include="Common\ThreadHelper.cs" />
@@ -131,7 +134,7 @@
     <Compile Include="Manager\AssemblyManager.cs" />
     <Compile Include="Manager\INIManager.cs" />
     <Compile Include="Manager\SmtpClientManager.cs" />
-    <Compile Include="Manager\ValidateManager.cs" />
+    <Compile Include="Operator\ValidateOperator.cs" />
     <Compile Include="Manager\XMLManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexPattern.cs" />
