--- a/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
+++ b/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RedisCacheProvider.cs" />
+    <Compile Include="RedisConfig.cs" />
     <Compile Include="RedisManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
