--- a/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
+++ b/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IDbContext.cs" />
+    <Compile Include="IDbContextFactory.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
