--- a/MasterChief.DotNet.Core.EF/MasterChief.DotNet.Core.EF.csproj
+++ b/MasterChief.DotNet.Core.EF/MasterChief.DotNet.Core.EF.csproj
@@ -47,7 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbRepository.cs" />
+    <Compile Include="EfRepository.cs" />
+    <Compile Include="EfDbContextBase.cs" />
     <Compile Include="Helper\DbContextHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
