--- a/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.csproj
+++ b/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.csproj
@@ -51,10 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DapperDataOperator.cs" />
-    <Compile Include="DapperOracleOperator.cs" />
-    <Compile Include="DapperSQLiteOperator.cs" />
-    <Compile Include="DapperSqlServerOperator.cs" />
+    <Compile Include="DapperDataManager.cs" />
+    <Compile Include="DapperOracleManager.cs" />
+    <Compile Include="DapperSQLiteManager.cs" />
+    <Compile Include="DapperSqlServerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
