--- a/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
+++ b/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
@@ -38,6 +38,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDbContext.cs" />
