--- a/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
+++ b/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
@@ -35,6 +35,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Dapper.Contrib">
+      <HintPath>..\packages\Dapper.Contrib.1.50.5\lib\net451\Dapper.Contrib.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DapperDbContextBase.cs" />
