--- a/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
+++ b/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
@@ -35,16 +35,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="Dapper.Contrib">
       <HintPath>..\packages\Dapper.Contrib.1.50.5\lib\net451\Dapper.Contrib.dll</HintPath>
     </Reference>
-    <Reference Include="System.Data.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DapperDbContextBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DapperRepository.cs" />
-    <Compile Include="DapperTableNameAttribute.cs" />
+    <Compile Include="Helper\DynamicQuery.cs" />
+    <Compile Include="Helper\QueryParameter.cs" />
+    <Compile Include="Helper\QueryResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -58,6 +60,9 @@
       <Project>{D1DC63AA-DB3A-4C47-9E20-F7474420BA48}</Project>
       <Name>MasterChief.DotNet4.Utilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helper\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
