--- a/MasterChief.DotNet4.UtilitiesTests/MasterChief.DotNet4.UtilitiesTests.csproj
+++ b/MasterChief.DotNet4.UtilitiesTests/MasterChief.DotNet4.UtilitiesTests.csproj
@@ -53,8 +53,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Common\ArrayHelperTests.cs" />
+    <Compile Include="Common\CheckHelperTests.cs" />
     <Compile Include="Common\CollectionHelperTests.cs" />
     <Compile Include="Common\ObjectHelperTests.cs" />
+    <Compile Include="Encryptor\AESEncryptorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
