--- a/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
+++ b/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\MasterChief.DotNet.Core.Contract.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,13 +39,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\PageHelper.cs" />
     <Compile Include="IDbContext.cs" />
     <Compile Include="IDatabaseContextFactory.cs" />
+    <Compile Include="IPagedList.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="ModelBase.cs" />
+    <Compile Include="PagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
