--- a/MasterChief.DotNet.Core.DapperTests/MasterChief.DotNet.Core.DapperTests.csproj
+++ b/MasterChief.DotNet.Core.DapperTests/MasterChief.DotNet.Core.DapperTests.csproj
@@ -95,6 +95,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="script.sql" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
