--- a/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
+++ b/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
@@ -23,6 +23,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Debug\MasterChief.DotNet.Core.RedisCache.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
