--- a/MasterChief.DotNet.Core.ConfigTests/MasterChief.DotNet.Core.ConfigTests.csproj
+++ b/MasterChief.DotNet.Core.ConfigTests/MasterChief.DotNet.Core.ConfigTests.csproj
@@ -36,7 +36,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.0.0\lib\net40\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -51,14 +56,26 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CacheConfigContext.cs" />
+    <Compile Include="ConfigModule.cs" />
+    <Compile Include="DaoConfig.cs" />
     <Compile Include="FileConfigServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedisConfig.cs" />
+    <Compile Include="RedisItemConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MasterChief.DotNet.Core.Config\MasterChief.DotNet.Core.Config.csproj">
       <Project>{E4770169-FB7F-49C1-BA70-58F24DA83D44}</Project>
       <Name>MasterChief.DotNet.Core.Config</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MasterChief.DotNet4.Utilities\MasterChief.DotNet4.Utilities.csproj">
+      <Project>{d1dc63aa-db3a-4c47-9e20-f7474420ba48}</Project>
+      <Name>MasterChief.DotNet4.Utilities</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
