完善单元测试；

--- a/MasterChief.DotNet.Dapper.UtilitiesTests/MasterChief.DotNet.Dapper.UtilitiesTests.csproj
+++ b/MasterChief.DotNet.Dapper.UtilitiesTests/MasterChief.DotNet.Dapper.UtilitiesTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DapperDataManagerTests.cs" />
+    <Compile Include="Model\EFSample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
