--- a/MasterChief.DotNet.Infrastructure.VerifyCodeExample/Web.config
+++ b/MasterChief.DotNet.Infrastructure.VerifyCodeExample/Web.config
@@ -9,7 +9,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <httpHandlers>
-      <add verb="GET" path="CreateVerifyCode.aspx" type="MasterChief.DotNet.Infrastructure.VerifyCodeExample.BackHanlder.VerifyCode" />
+      <add verb="GET" path="CreateVerifyCode.aspx" type="MasterChief.DotNet.Framework.VerifyCodeExample.BackHanlder.VerifyCode" />
     </httpHandlers>
   </system.web>
 </configuration>
