nuget and format code

--- a/MasterChief.DotNet.Ftp.Utilities/MasterChief.DotNet.Ftp.Utilities.csproj
+++ b/MasterChief.DotNet.Ftp.Utilities/MasterChief.DotNet.Ftp.Utilities.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FTPClient.cs" />
+    <Compile Include="FtpClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
