--- a/MasterChief.DotNet.Core.Cache/MasterChief.DotNet.Core.Cache.csproj
+++ b/MasterChief.DotNet.Core.Cache/MasterChief.DotNet.Core.Cache.csproj
@@ -30,8 +30,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Core.Cache.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet4.Utilities.1.0.0.1\lib\net40\MasterChief.DotNet4.Utilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
@@ -48,10 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MasterChief.DotNet4.Utilities\MasterChief.DotNet4.Utilities.csproj">
-      <Project>{D1DC63AA-DB3A-4C47-9E20-F7474420BA48}</Project>
-      <Name>MasterChief.DotNet4.Utilities</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
