--- a/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
+++ b/MasterChief.DotNet.Core.Contract/MasterChief.DotNet.Core.Contract.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Core.Contract.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
