--- a/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.csproj
+++ b/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Dapper.Utilities.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.50.0.0, Culture=neutral, processorArchitecture=MSIL">
