--- a/MasterChief.DotNet4.5.Utilities/MasterChief.DotNet4.5.Utilities.nuspec
+++ b/MasterChief.DotNet4.5.Utilities/MasterChief.DotNet4.5.Utilities.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/YanZhiwei/MasterChief/tree/master/MasterChief.DotNet4.5.Utilities</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright YanZhiwei 2019</copyright>
     <tags>DotNet4.5 Utilities</tags>
   </metadata>
